# taglib-ts

./: .gitignore  AGENTS.md  README-ts.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts
.github/workflows/: build.yml  copilot-setup-steps.yml  docs.yml  release.yml  typedoc.yml
examples/: propertymap.ts  tagreader.ts  tagwriter.ts
src/: audioProperties.ts  byteVector.ts  combinedTag.ts  file.ts  fileRef.ts  formatDetection.ts  index.ts  simpleApi.ts  tag.ts
src/ape/: apeFile.ts  apeProperties.ts  apeTag.ts
src/asf/: asfAttribute.ts  asfFile.ts  asfPicture.ts  asfProperties.ts  asfTag.ts  asfUtils.ts
src/benchmarks/: iostream.bench.ts
src/dsdiff/: dsdiffDiinTag.ts  dsdiffFile.ts  dsdiffProperties.ts
src/dsf/: dsfFile.ts  dsfProperties.ts
taglib/: fileref.cpp
tests/: apeFile.test.ts  apeTag.test.ts  asf.test.ts  byteVector.test.ts  byteVectorStream.test.ts  cTagLibValidation.test.ts  chunkedByteVectorStream.test.ts  complexProperties.test.ts  dsdiff.test.ts  dsf.test.ts  fileRef.test.ts  flac.test.ts  flacPicture.test.ts  formatDetection.test.ts  id3v1.test.ts  id3v2.test.ts  it.test.ts  matroska.test.ts  mod.test.ts  mp4.test.ts  mpc.test.ts  mpeg.test.ts  ogg.test.ts  pictureWriteRead.test.ts  propertyMap.test.ts  riffInfo.test.ts  s3m.test.ts  shorten.test.ts  synchData.test.ts  testHelper.ts  test_fileref_detect.cpp  trueAudio.test.ts  variant.test.ts  wav-aiff.test.ts  wavpack.test.ts  xiphComment.test.ts  xm.test.ts
validator/: CMakeLists.txt  tag_with_c_full.cpp  taglib_validate.cpp
(+136 files in other folders)
